--- a/alura plus/css/style.css
+++ b/alura plus/css/style.css
@@ -142,3 +142,46 @@ footer p {
     margin-top: 24px;
 }
 
+@media screen and (max-width: 768px){
+    .container{
+        display: block;
+        background-image: none;
+    }
+    .container__img{
+        width: 50vw;
+    }
+    .container__caixa{
+        margin: 2em 2em;
+    }
+    .container__secundaria{
+        margin: 32px;
+        text-align: center;
+
+    }
+    .container__secundaria img{
+        width: 50vw;
+    }
+    .terciario{
+        margin: 32px;
+        text-align: center;
+    }
+    .terciario img{
+        width: 50vw;
+    }
+    .container__quarto{
+        margin: 32px;
+    }
+    .container__quarto img{
+        width: 50vw;
+    }
+    ul{
+        display: block;
+        text-align: center;
+    }
+    footer{
+        text-align: center;
+        margin: 32px;
+        display: block;
+    }
+}
+
