--- a/Alura books/style.css
+++ b/Alura books/style.css
@@ -1,9 +1,10 @@
 :root{
-    --fundo-cinza: #C4C4C4;
+    --fundo-cinza: #EBECEE;
     --fundo-azul: linear-gradient(to right, #002F52, #326589);
     --texto-laranja: #EB9B00;
     --texto-azul: #002F52;
     --texto-branco: #FFFFFF;
+    --font-principal: 'Poppins';
 
 }
 
@@ -82,7 +83,7 @@ body{
 
 .container__pesquisa{   
     text-align: center;
-    padding: 32px;
+    padding: 2.5em 2em;
     background-image: var(--fundo-azul);
     color: var(--texto-branco);
 }
@@ -95,14 +96,25 @@ body{
     font-size: 16px;
     font-weight: normal;
 }
-.botao_pesquisa{
+.botao{
     display: inline-flex;
+    background-color: transparent;
     border: 1px solid white;
     border-radius: 24px;
     font-size: 14px;
-    padding: 10px 44px;
-    gap: 10px;
     margin-top: 24px;
+    padding: 1em;
+    width: 100%;
+    color: var(--texto-branco);
+}
+.botao::placeholder{
+    font-family: var(--font-principal);
+    font-size: 14px;
+    font-weight: 400;
+    background: url(./imgs/Lupa.svg) no-repeat;
+    text-align: center;
+    color: var(--texto-branco);
+    background-position: 1em;
 }
 
 
@@ -110,13 +122,145 @@ body{
 
 .container__primaria{
     background-color: var(--fundo-cinza);
-    height: 100vh;
-    margin-top: 20px;
+    padding-bottom: 0.5em;
 }
 .container__primaria h1{
     background-color: var(--texto-branco);
     text-align: center;
-    padding-bottom: 8px;
+    padding-bottom: 0.5em;
     font-size: 18px;
+    font-weight: bold;
     color: var(--texto-laranja);
+}
+.swiper-slide img {
+    width: 100%;
+}
+.swiper-button-prev, .swiper-button-next{
+    display: none;
+}
+.swiper-pagination{
+    position: initial;
+    margin: 0.5em 0;
+}
+
+/* PRIMEIRO CARD ---------------------------------------------------------------*/
+.primeiro_card{
+    display: flex;
+    gap: 17px;
+}
+.card_botao{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1.5em;
+}
+.botoes{
+    list-style: none;
+    display: flex;
+    gap: 32px;
+}
+.container__card{
+    margin: 1em;
+    border: 1px solid var(--texto-branco);
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
+    background-color: var(--texto-branco);
+    padding: 1em;
+    margin-bottom: 0.5em;
+}
+.primeiro_texto{
+    color: var(--texto-laranja);
+    font-size: 16px;
+    font-weight: 700;
+    
+}
+.segundo_texto{
+    color: #002F52;
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 0.5em;
+}
+.terceiro_texto{
+    color: black;
+    font-size: 14px;
+    font-family: 400;
+}
+.ancora{
+    text-decoration: none;
+    text-align: center;
+    color: var(--texto-branco);
+    background-color: var(--texto-laranja);
+    padding: 12px 16px;
+    width: 45%;
+}
+
+/*TOPICOS --------------------------------------------------------*/
+.container__topico{
+    background-color: var(--texto-azul);
+    text-align: center;
+    margin: 1em 0;
+}
+.topicos{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.titulo_topico{
+    font-size: 16px;
+    font-weight: lighter;
+    color: var(--texto-branco);
+    padding: 1.25em 0;
+}
+.topicos li{
+    margin: 2em 0.8em;
+    list-style: none;
+}
+.ancora_topico{
+    font-size: 14px;
+    font-weight: 700;
+    font-family: var(--font-principal);
+    text-decoration: none;
+    text-align: center;
+    color: var(--texto-branco);
+    background-color: var(--texto-laranja);
+    padding: 1em 1.5em;
+}
+
+/*NOVIDADES -------------------------------------------------*/
+.container__novidades{
+    margin: 1.5em;
+}
+.container__novidades h2{
+    font-size: 18px;
+    margin-bottom: 0.5em;
+}
+.container__novidades p{
+    font-size: 16px;
+}
+.botao_novidades{
+    display: inline-flex;
+    background-color: transparent;
+    border: 1px solid var(--texto-azul);
+    border-radius: 24px;
+    font-size: 14px;
+    margin-top: 24px;
+    padding: 1em;
+    width: 100%;
+}
+.botao_novidades::placeholder{
+    font-family: var(--font-principal);
+    font-size: 14px;
+    font-weight: 400;
+    background: url(./imgs/Email.svg) no-repeat;
+    color: var(--texto-azul);
+    background-position: 1em;
+    padding-left: 3em;
+}
+
+/*FOOTER --------------------------------------------------------*/
+hr{
+    margin: 0
+}
+footer h2{
+    padding: 1em 1.5em;
+    font-size: 16px;
 }
