--- a/WaveCast-projeto-base/style.css
+++ b/WaveCast-projeto-base/style.css
@@ -1,3 +1,5 @@
+@import url(./menu.css);
+
 body{
     display: grid;
     grid-template-areas: 
@@ -13,4 +15,74 @@ body{
 }
 .menu-lateral{
     grid-area: aside;
+}
+
+.secao{
+    display: grid;
+    align-items: end;
+    row-gap: 2em;
+}
+.secao-horizontal, .secao-vertical{
+    grid-template-rows: 70px auto;
+}
+.secao-horizontal .secao__cartoes{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(80%/2, max(350px, 80%/3)), 1fr));
+    gap: 1.25rem;
+}
+.secao-horizontal .cartao{
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 3rem 0.9rem;
+    column-gap: 1em;
+}
+.secao-horizontal .cartao__imagem{
+    grid-area: 1 / 1 / 4 / 2;
+    
+}
+.secao-horizontal .cartao__titulo{
+    grid-area: 2 / 2 / 3 / 3 ;
+}
+.secao-horizontal .cartao__player{
+    grid-area: 3 / 2 / 4 / 3;
+}
+.secao-horizontal .cartao__botao{
+    grid-area: 2 / 3 / 3 / 4;
+}
+.secao-vertical{
+    grid-template-columns: 1fr auto;
+}
+.secao-vertical .secao__cartoes{
+    display: grid;
+    grid-auto-flow: column;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    column-gap: 1em;
+    grid-column: 1/3;
+}
+.secao-vertical .cartao a{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
+}
+.secao-vertical .secao__cartoes .cartao__titulo{
+    flex-grow: 1;
+}
+.navbar__items{
+    display: flex;
+    padding: 1em;
+    justify-content: space-around;
+    height: 100%;
+}
+.navbar__item button{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5em;
+}
+.menu-lateral__link button{
+    align-items: center;
+    display: flex;
+    gap: 0.5em;
 }
